--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<!-- This is the Colmar Capstone project. It has been so hard, but so good for teaching me. Thank you for creating this project. Fingers crossed that I pass! -->
 <head>
     <link href="https://fonts.googleapis.com/css?family=Lora:700|Open+Sans:400,400i,700" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
