fixing the footer
dang

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     <footer>
         <div class="content" role="presentation">
             <span class="copyright">&copy; 2016  Colmar Academy. All rights reserved</span>
-            <span class="location">Designed in NYC</span>
+            <span class="terms">Terms&nbsp;&nbsp;  Privacy</span>
         </div>
     </footer>
 
